syntax = "proto3";

option java_multiple_files = true;
package com.example.grpc;


message LocationRequest {
  float latitude = 2;
  float longitude = 3;
  string title = 4;
}

message LocationResponse {
  string id = 1;
  float latitude = 2;
  float longitude = 3;
  string title = 4;
}

service LocationService {
  rpc create(LocationRequest) returns (LocationResponse);
}