syntax = "proto3";

option java_multiple_files = true;
package com.example.grpc;


enum Role {
    DRIVER = 0;
    USER = 1;
}

message UserRequest {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string password = 5;
  Role Role = 6;
  string carId = 7;
}

message UserResponse {
  string message = 1;
}

service RegistrationService {
  rpc register(UserRequest) returns (UserResponse);
}

service GatewayRegistrationService {
  rpc register(UserRequest) returns (UserResponse);
}