syntax = "proto3";

option java_multiple_files = true;
package com.example.grpc;


message CarRequest {
  string number = 1;
  string description = 2;
}

message CarResponse {
  string id = 1;
  string number = 2;
  string description = 3;
}

service GatewayCarService {
  rpc create(CarRequest) returns (CarResponse);
}